--- a/app/assets/stylesheets/glass/partials/components/_onboarding.scss
+++ b/app/assets/stylesheets/glass/partials/components/_onboarding.scss
@@ -438,8 +438,8 @@ $color_choice_dimension: 40px;
 		&.color-input-container-lg {
 			margin-top: 80px;
 		}
-		.color-field, .validation{
-  		max-width: 150px;
+		.color-field{
+			height: 42px;
 		}
 	}
 	.divider-right{
