--- a/app/views/glass/_head.html.erb
+++ b/app/views/glass/_head.html.erb
@@ -17,6 +17,10 @@
 
 <meta charset='<%= Rails.application.config.encoding %>' />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon" href="/touch-icon.png">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 <%= yield :meta %>
 
