--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -1180,7 +1180,7 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
 .placeholder-labels{
   .form-control{
     &:focus{
-      &::placeholder{
+      &::placeholder, :-moz-placeholder{
         top: -25px;
         visibility: visible !important;
         font-size: 14px;
@@ -1191,7 +1191,7 @@ input:focus, .form-control:focus, input[type="submit"]:focus, .btn:focus, input[
         background: red;
       }
     }
-    &::placeholder{
+    &::placeholder, :-moz-placeholder{
       position: relative;
       transition: 0s ease-out;
       top: 0;
