--- a/app/views/refinery/inquiries/admin/inquiries/_dropdown.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_dropdown.html.erb
@@ -27,7 +27,7 @@
 </div>
 
 <div id="notification-modal" class="ui standard modal">
-  <i class="close icon"></i>
+  <i class="close gcicon gcicon-cancel"></i>
   <div class="header">
     Who should be notified?
   </div>
@@ -36,11 +36,11 @@
     </div>
   </div>
   <div class="actions">
-    <div class="two fluid ui inverted buttons">
-      <div class="ui red basic inverted button">
+    <div class="buttons">
+      <div class="btn btn-default">
         Cancel
       </div>
-      <div class="ui green basic inverted button positive">
+      <div class="btn btn-primary">
         Submit
       </div>
     </div>
@@ -48,7 +48,7 @@
 </div>
 
 <div id="response-email-modal" class="ui standard modal">
-  <i class="close icon"></i>
+  <i class="close gcicon gcicon-cancel"></i>
   <div class="header">
     Response Email
   </div>
@@ -57,11 +57,11 @@
     </div>
   </div>
   <div class="actions">
-    <div class="two fluid ui inverted buttons">
-      <div class="ui red basic inverted button">
+    <div class="buttons">
+      <div class="btn btn-default">
         Cancel
       </div>
-      <div class="ui green basic inverted button positive">
+      <div class="btn btn-primary">
         Submit
       </div>
     </div>
