--- a/app/views/glass/_javascripts.html.erb
+++ b/app/views/glass/_javascripts.html.erb
@@ -7,7 +7,7 @@
     refinery.current_admin_locale = '<%= current_admin_locale %>';
   </script>
 
-  <%= javascript_include_tag 'refinery-glass' -%>
+  <%= javascript_include_tag 'refinery-glass', :async => true -%>
 
   <!-- TODO: these are needed to make WYMEDITOR to work.  But cause dup js (jquery) so break other JS.  Just remove them for good soon -->
   <%#= javascript_include_tag 'admin' -%>
@@ -29,9 +29,9 @@
   <!-- WAS views/refinery/admin/_javascripts -->
 
 <% elsif current_refinery_user.present? %>
-  <%= javascript_include_tag 'kitchen-sink' %>
+  <%= javascript_include_tag 'kitchen-sink', :async => true %>
 <% else %>
-  <%= javascript_include_tag 'site' %>
+  <%= javascript_include_tag 'site', :async => true %>
 <% end %>
 
 <!-- WAS entire views/refinery/_javascripts -->
