--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -32,14 +32,15 @@
     <% inviting_user = @resource.inviting_user %>
     <% first_name    = @resource.name.split.map(&:capitalize)[0] %>
 
-      <p>Howdy, <%= first_name %>!</p>
+    <p>Hello <%= first_name %>,</p>
+    <p>
+      Guess what? <%= inviting_user.capitalize %> has invited you to join <%= Refinery::Core.site_name %>. Hooray!
+    </p>
+    <p>
+      We’ll guide you through the signup process. If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @resource.site_url %>/admin" target="_blank"><%= @resource.site_url %>/admin</a>.
+      If you're antsy to get going, we don't blame ya.
+    </p>
 
-      <p>Guess what? <%= inviting_user %> has invited you to join <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a>! Lucky you.</p>
-
-      <p>
-        If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @resource.site_url %>/admin" target="_blank"><%= @resource.site_url %>/admin</a>.
-      </p>
-      <p><%= 'If you\'re antsy to get started, we don\'t blame ya! Let\'s get started, shall we?' %></p>
   <% end %>
 
   <% content_for :action_link do %>
@@ -50,13 +51,12 @@
 
   <% content_for :email_signoff do %>
     <p>With love,</p>
-    <p>The <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a> team</p>
-    <p></p>
-    <p><%= 'P.S. This is a friendly reminder that this is a public beta and we are still fiddling with a few kinks in the system. Thanks for being patient and do not be shy to send your thoughts on the experience!' %></p>
+    <p>The <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name.capitalize %></a> Team</p>
+
   <% end %>
 
   <% content_for :email_footer do %>
-    <%= I18n.t("refinery.mailer.invitation_instructions.ignore").html_safe %>
+
   <% end %>
 <% end %>
 <%= render 'refinery/email_template' %>
