--- a/app/views/refinery/passwords/edit.html.erb
+++ b/app/views/refinery/passwords/edit.html.erb
@@ -1,11 +1,11 @@
 <% username_capitalized = @resource.username.present? ? @resource.username.split.map(&:capitalize).join(' ') : @resource.username -%>
 
 <% unless @resource.confirmed? %>
-  <h1>Getting to know you!</h1>
+  <h1>Getting to know you</h1>
 
   <div class="margin-bottom-sm">
     <p>
-      To get started, we need you to create your personal account page (we’ll get to your organization’s account next). This is the account that you’ll use in order to log in to the Content Management System (CMS).
+      Let’s start with the basics. Please tell us your name and your super secret password.
     </p>
     <p>
       In the future, use your full name '<%= username_capitalized %>' or email address '<%= @resource.email %>' to log in.
@@ -32,15 +32,19 @@
   </div>
 
   <div class='form-group'>
+    <div class='validate'>
+      <span></span>
+    </div>
     <%= f.password_field :password, :autocomplete => 'off', :class => 'form-control input-lg',
                          :placeholder => 'Password', 'data-validate'=> 'required' -%>
-    <span class='tip text-danger'></span>
   </div>
 
   <div class='form-group'>
+    <div class='validate'>
+      <span></span>
+    </div>
     <%= f.password_field :password_confirmation, :autocomplete => 'off', :class => 'form-control input-lg',
                          :placeholder => 'Password Confirmation', 'data-validate'=> 'required' -%>
-    <span class='tip text-danger'></span>
   </div>
 
   <%= render '/refinery/admin/form_actions', :f => f,
