--- a/app/views/refinery/passwords/new.html.erb
+++ b/app/views/refinery/passwords/new.html.erb
@@ -5,9 +5,11 @@
                        :html => { :method => :post } do |f| %>
 
   <div class='form-group'>
+    <div class='validate'>
+      <span></span>
+    </div>
     <%= f.text_field :email, :class => "form-control",
                      :placeholder => t('email_address', :scope => 'refinery.users.forgot'), 'data-validate'=> 'required,email' -%>
-    <span class='tip text-danger'></span>
   </div>
 
   <%= render '/refinery/admin/form_actions', :f => f,
