--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -8,7 +8,7 @@
 body{
   height: 100%;
   background: lighten($off-white, 2%) !important;
-  line-height: 1.6;
+  line-height: 1.6 !important;
 }
 
 #wrapper{
