--- a/app/views/refinery/admin/_mobile_menu.html.erb
+++ b/app/views/refinery/admin/_mobile_menu.html.erb
@@ -1,4 +1,5 @@
-<ul class="list-unstyled">
-  <li><%= link_to 'FIXME!!!!! Pages', refinery.admin_pages_path %></li>
-  <li><%= link_to 'FIXME!!!!! Users', refinery.admin_users_path %></li>
-</ul>
+<%= link_to '<i class="gcicon gcicon-feather"></i> Articles'.html_safe, refinery.admin_pages_path %>
+<%= link_to '<i class="gcicon gcicon-add"></i> New Article'.html_safe, refinery.admin_pages_path %>
+<%= link_to '<i class="gcicon gcicon-pages"></i> Pages'.html_safe, refinery.admin_pages_path %>
+<%= link_to '<i class="gcicon gcicon-group"></i> People'.html_safe, refinery.admin_pages_path %>
+<button><i class="gcicon gcicon-bars"></i> More</button>
