--- a/app/views/refinery/admin/pages/_form.html.erb
+++ b/app/views/refinery/admin/pages/_form.html.erb
@@ -41,8 +41,9 @@
       <%= f.hidden_field :custom_slug %>
     <% end %>
 
+    <% if @valid_view_templates.length > 1 %>
     <% use_view_templates = Refinery::Pages.config.use_view_templates.nil? ? true : Refinery::Pages.config.use_view_templates %>
-    <% if use_view_templates || current_refinery_user.has_role?(:superuser) %>
+    <%   if use_view_templates || current_refinery_user.super_user? %>
       <div class="sidebar-section">
         <button type="button" class="collapse-toggle collapsed" data-toggle="collapse" data-target="#template-collapse" aria-expanded="true" aria-controls="demo">
           <div class="sidebar-section-heading">
@@ -60,6 +61,7 @@
           </div>
         </div>
       </div>
+    <%   end %>
     <% end %>
 
     <%= yield :after_main_options %>
