mobile menu closes and opens with more button click

--- a/app/views/refinery/admin/_mobile_menu.html.erb
+++ b/app/views/refinery/admin/_mobile_menu.html.erb
@@ -2,4 +2,4 @@
 <%= link_to '<i class="gcicon gcicon-add"></i> New Article'.html_safe, refinery.admin_pages_path %>
 <%= link_to '<i class="gcicon gcicon-pages"></i> Pages'.html_safe, refinery.admin_pages_path %>
 <%= link_to '<i class="gcicon gcicon-group"></i> People'.html_safe, refinery.admin_pages_path %>
-<button><i class="gcicon gcicon-bars"></i> More</button>
+<button id="toggle-cms-menu"><i class="gcicon gcicon-bars"></i> More</button>
