added close button for cms sidebar for mobile

--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -54,6 +54,7 @@ html
             <% else %>
               <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
             <% end %>
+            <button class="btn btn-primary close-cms-menu hidden">&times;</button>
           </div>
         </div>
         <div id="sidebar-left-inner">
