--- a/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
@@ -24,11 +24,11 @@
 
       <span class="spam-filter">
         <% if inquiry.spam? %>
-          <%= link_to 'Ham', refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
-                      :title => t('hello?') -%>
+          <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
+                      :title => t('hello?'),:class => 'circle-icon' -%>
         <% else %>
-          <%= link_to 'Spam', refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
-                      :title => t('.mark_as_spam') -%>
+          <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
+                      :title => t('.mark_as_spam'),:class => 'circle-icon' -%>
         <% end %>
       </span>
     </span>
