--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -54,7 +54,7 @@ html
             <% else %>
               <i class="gcicon gcicon-glass-canvas hidden"></i> <%= link_to Refinery::Core.site_name, '/' %>
             <% end %>
-            <button class="btn btn-primary close-cms-menu visible-xs">&times;</button>
+            <button class="close-cms-menu visible-xs menu-link"><i class="gcicon gcicon-cancel"></i></button>
           </div>
         </div>
         <div id="sidebar-left-inner">
