Fix the re-invite process (reset pswd before confirmed)
 - Don't rely on the user controller (create) as this can be called from
   password reset too
 - Updated some of the text too

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -25,19 +25,19 @@
 <% else %>
   <!-- Invitation Email -->
   <% content_for :email_title do %>
-    Welcome to <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name %></a>!&nbsp;
+    Welcome to <a href="<%= @site_url %>" target="_blank"><%= Refinery::Core.site_name %></a>!&nbsp;
   <% end %>
 
   <% content_for :email_body do %>
-    <% inviting_user = @resource.inviting_user %>
+    <% inviting_user = @resource.inviting_user.present? ? @resource.inviting_user : 'someone' %>
     <% first_name    = @resource.name.split.map(&:capitalize)[0] %>
 
     <p>Hello <%= first_name %>,</p>
     <p>
-      Guess what? <%= inviting_user.capitalize %> has invited you to join <%= Refinery::Core.site_name %>. Hooray!
+      Guess what? <%= inviting_user.capitalize %> has invited you to join the <%= Refinery::Core.site_name %> website team. Hooray!
     </p>
     <p>
-      We’ll guide you through the signup process. If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @resource.site_url %>/admin" target="_blank"><%= @resource.site_url %>/admin</a>.
+      We’ll guide you through the signup process. If you ever need to log into the Content Management System later (after you’ve set up your account), you may log into the CMS at <a href="<%= @admin_url %>" target="_blank"><%= @admin_url %></a>.
       If you're antsy to get going, we don't blame ya.
     </p>
 
@@ -51,7 +51,7 @@
 
   <% content_for :email_signoff do %>
     <p>With love,</p>
-    <p>The <a href="<%= @resource.site_url %>" target="_blank"><%= Refinery::Core.site_name.capitalize %></a> Team</p>
+    <p>The <a href="<%= @site_url %>" target="_blank"><%= Refinery::Core.site_name.capitalize %></a> Team</p>
 
   <% end %>
 
