--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -565,6 +565,17 @@ body{
         .site-name{
            width: 100%;
         }
+        .menu-link{
+          position: relative;
+          width: 40px;
+          height: 40px;
+          padding: 4px 5px;
+          margin: -5px;
+          top: 0;
+          .gcicon{
+            font-size: 18px;
+          }
+        }
       }
       .log-out{
         width: 100%;
