base admin mobile menu contains two items: add page and pages

--- a/app/views/refinery/admin/_mobile_menu.html.erb
+++ b/app/views/refinery/admin/_mobile_menu.html.erb
@@ -1,5 +1,2 @@
-<%= link_to '<i class="gcicon gcicon-feather"></i> Articles'.html_safe, refinery.admin_pages_path %>
-<%= link_to '<i class="gcicon gcicon-add"></i> New Article'.html_safe, refinery.admin_pages_path %>
 <%= link_to '<i class="gcicon gcicon-pages"></i> Pages'.html_safe, refinery.admin_pages_path %>
-<%= link_to '<i class="gcicon gcicon-group"></i> People'.html_safe, refinery.admin_pages_path %>
-<button id="toggle-cms-menu"><i class="gcicon gcicon-bars"></i> More</button>
+<%= link_to '<i class="gcicon gcicon-add"></i> New Page'.html_safe, refinery.new_admin_page_path %>
