--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -712,15 +712,68 @@ body{
   .btn-group .btn-link-grey{
     border: 1px solid $grey-3;
   }
-  .search {
-    flex: 1; /* take up the rest of the remaining space */
-    order: -1;
-    margin-right: 15px;
-  }
-  .search input{
-    width: 100%;
-    height: 37px;
-    line-height: 1.2;
+  .search{
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+    z-index: 100;
+    &:hover{
+      .search-form{
+        .form-control{
+          width: 300px;
+          transition: .2s ease-out;
+        }
+        .search-btn{
+          left: 258px;
+          border-bottom-left-radius: 0;
+          border-top-left-radius: 0;
+          transition: .2s ease-out;
+        }
+      }
+    }
+    .search-form{
+      position: absolute;
+      left: 0;
+      width: 40px;
+      .form-control{
+        border-radius: 20px;
+        height: 40px;
+        line-height: 1.2;
+        transition: .2s .75s ease-out;
+        &:focus{
+          width: 300px;
+          transition: .2s ease-out;
+          &+.search-btn{
+            left: 258px;
+            border-bottom-left-radius: 0;
+            border-top-left-radius: 0;
+            transition: .2s ease-out;
+          }
+        }
+      }
+      .search-btn{
+        position: absolute;
+        top: 2px;
+        width: 36px;
+        height: 36px;
+        background: $white;
+        border-radius: 20px;
+        left: 2px;
+        transition: .2s .75s ease-out;
+        &:hover, &:focus{
+          .gcicon{
+            color: $primary-hover;
+          }
+        }
+        .gcicon{
+          color: $grey-5;
+        }
+        button{
+          height: 36px;
+          width: 36px;
+        }
+      }
+    }
   }
   .btn{
     @include transition-fix();
