disgarded unnecessary change

--- a/app/views/refinery/acts_as_indexed/admin/_search.html.erb
+++ b/app/views/refinery/acts_as_indexed/admin/_search.html.erb
@@ -1,5 +1,5 @@
 <div class="search">
-  <form method='GET' action='<%= url %>' class="search_form">
+  <form method='GET' action='<%= url %>'>
     <div class="search-form">
       <%= text_field :search, nil, :id => 'search', :type => 'search', :name => 'search', :value => params[:search],
                      :class => 'form-control',
