--- a/app/views/refinery/admin/pages/index.html.erb
+++ b/app/views/refinery/admin/pages/index.html.erb
@@ -8,7 +8,7 @@
         <%= yield :top_message %>
       <% end %>
       <div class="contextual-menu">
-        <div class="contextual-options space-between">
+        <div class="contextual-options">
           <button id='reorder_action' class="btn btn-link-grey">
             <i class="gcicon gcicon-reorder bump-down"></i> <strong>Reorder</strong>
           </button>
