updated inquires so that modals work correctly. Removed <pre> tag from user admin index

--- a/app/views/refinery/inquiries/admin/inquiries/_dropdown.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_dropdown.html.erb
@@ -37,10 +37,10 @@
   </div>
   <div class="actions">
     <div class="buttons">
-      <div class="btn btn-default">
+      <div class="btn btn-default btn-modal-cancel">
         Cancel
       </div>
-      <div class="btn btn-primary">
+      <div class="btn btn-primary btn-submit-modal">
         Submit
       </div>
     </div>
@@ -58,10 +58,10 @@
   </div>
   <div class="actions">
     <div class="buttons">
-      <div class="btn btn-default">
+      <div class="btn btn-default btn-modal-cancel">
         Cancel
       </div>
-      <div class="btn btn-primary">
+      <div class="btn btn-primary btn-submit-modal">
         Submit
       </div>
     </div>
