updated ham and span icons to be gcicon cancel and check

--- a/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/_inquiry.html.erb
@@ -24,11 +24,11 @@
 
       <span class="spam-filter">
         <% if inquiry.spam? %>
-          <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
-                      :title => t('hello?'),:class => 'circle-icon' -%>
+          <%= link_to '<i class="gcicon gcicon-cancel"></i>'.html_safe, refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
+                      :title => t('hello?'), :class => 'circle-icon' -%>
         <% else %>
-          <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe, refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
-                      :title => t('.mark_as_spam'),:class => 'circle-icon' -%>
+          <%= link_to '<i class="gcicon gcicon-check"></i>'.html_safe, refinery.toggle_spam_inquiries_admin_inquiry_path(inquiry),
+                      :title => t('.mark_as_spam'), :class => 'circle-icon' -%>
         <% end %>
       </span>
     </span>
