--- a/app/assets/stylesheets/glass/partials/layout/_interface.scss
+++ b/app/assets/stylesheets/glass/partials/layout/_interface.scss
@@ -695,11 +695,15 @@ body{
 
 .contextual-menu{
   background: $white;
-  padding: 15px;
+  padding: 7px 15px;
   margin-bottom: 30px;
   display: flex;
   align-items: center;
   border-radius: $radius;
+  &> *{
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
   .contextual-options{
     display: flex;
     align-items: center;
@@ -714,40 +718,65 @@ body{
   }
   .search{
     height: 40px;
-    width: 40px;
-    margin-right: 10px;
     z-index: 100;
+    width: 100%;
+    order: 2;
+    @media (min-width: 768px) {
+      margin-right: 7px; 
+      width: 40px;
+      order: -1;
+    }
     &:hover{
       .search-form{
         .form-control{
-          width: 300px;
+          width: 100%;
           transition: .2s ease-out;
+          @media (min-width: 768px) {
+            width: 300px; 
+          }
         }
         .search-btn{
-          left: 258px;
           border-bottom-left-radius: 0;
           border-top-left-radius: 0;
           transition: .2s ease-out;
+          @media (max-width: 767px) {
+            right: 4px;
+            left: auto;
+          }
+          @media (min-width: 768px) {
+            left: 260px; 
+          }
         }
       }
     }
     .search-form{
       position: absolute;
       left: 0;
-      width: 40px;
+      width: 100%;
+      @media (min-width: 768px) {
+        width: 40px;
+      }
       .form-control{
         border-radius: 20px;
         height: 40px;
         line-height: 1.2;
         transition: .2s .75s ease-out;
         &:focus{
-          width: 300px;
           transition: .2s ease-out;
+          @media (min-width: 768px) {
+                      width: 300px;  
+          }
           &+.search-btn{
-            left: 258px;
             border-bottom-left-radius: 0;
             border-top-left-radius: 0;
             transition: .2s ease-out;
+            @media (max-width: 767px) {
+              right: 4px;
+              left: auto;
+            }
+            @media (min-width: 768px) {
+              left: 260px; 
+            }
           }
         }
       }
@@ -758,7 +787,13 @@ body{
         height: 36px;
         background: $white;
         border-radius: 20px;
-        left: 2px;
+        @media (max-width: 767px) {
+          right: 4px;
+          left: auto;
+        }
+        @media (min-width: 768px) {
+          left: 2px; 
+        }
         transition: .2s .75s ease-out;
         &:hover, &:focus{
           .gcicon{
@@ -800,15 +835,21 @@ body{
     }
   }
   .btn{
-    margin: 0 7px;
+    margin-right: 7px;
+    margin-left: 7px;
   }
   &>.btn-primary{
     &:last-child{
       margin-left: auto;
+      margin-right: 0;
+      @media (max-width: 767px) {
+        order: -1;
+        margin-left: 0; 
+      }
     }
   }
   .dropdown{
-    margin: 0 15x;
+    margin: 0 7px;
     &:hover, &:focus{
       z-index: 1000;
       outline: none;
@@ -819,6 +860,15 @@ body{
         visibility: visible;
         opacity: 1;
         transition: opacity 0.2s ease-in;
+        height: auto;
+      }
+    }
+    &:last-child{
+      margin-left: auto;
+      margin-right: 0;
+      .dropdown-menu{
+        left: auto;
+        right: 0; 
       }
     }
   }
@@ -832,6 +882,9 @@ body{
     visibility: hidden;
     opacity: 0;
     min-width: 100%;
+    margin-bottom: 15px;
+    height: 0;
+    overflow: hidden;
     li{
       &:first-child{
         border-top: 1px solid $grey-1;
@@ -850,10 +903,6 @@ body{
           }
         }
       }
-    }
-    &:last-child{
-      left: auto;
-      right: 0; 
     }
     .gcicon{
       color: $grey-3;
@@ -942,6 +991,7 @@ body{
 @media (max-width: 767px) {
   .contextual-menu {
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
